--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
   <div class="project-container">
     
     <div class="project-card">
-      <img src="project1.png" alt="Project One Screenshot" class="project-image">
+      <img src="Project1.png" alt="Project One Screenshot" class="project-image">
       <h3>Project One</h3>
       <p>Basic HTML and CSS landing page.</p>
       <a href="#" class="project-btn" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <img src="project2.png" alt="Project Two Screenshot" class="project-image">
+      <img src="Project2.png" alt="Project Two Screenshot" class="project-image">
       <h3>Project Two</h3>
       <p>Responsive portfolio template.</p>
       <a href="#" class="project-btn" target="_blank">View Project</a>
