--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="hero_images">
-          <img src="portfolio_images/Hero.png" alt="profile_illustration">
+          <img src="Hero.png" alt="profile_illustration">
         </div>
       </div>
     </section>
@@ -74,7 +74,7 @@
 </p>
         </div>
         <div class="about_image">
-          <img src="portfolio_images/About.png" alt="about_image">
+          <img src="About.png" alt="about_image">
         </div>
       </div>
     
@@ -139,14 +139,14 @@
   <div class="project-container">
     
     <div class="project-card">
-      <img src="portfolio_images/project1.png" alt="Project One Screenshot" class="project-image">
+      <img src="Project1.png" alt="Project One Screenshot" class="project-image">
       <h3>Project One</h3>
       <p>Basic HTML and CSS landing page.</p>
       <a href="#" class="project-btn" target="_blank">View Project</a>
     </div>
 
     <div class="project-card">
-      <img src="portfolio_images/project2.png" alt="Project Two Screenshot" class="project-image">
+      <img src="Project2.png" alt="Project Two Screenshot" class="project-image">
       <h3>Project Two</h3>
       <p>Responsive portfolio template.</p>
       <a href="#" class="project-btn" target="_blank">View Project</a>
