--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <div class="social-icons">
       <a href="https://www.linkedin.com/in/yourusername/" target="_blank">LinkedIn</a>
       <a href="https://github.com/Arishlinuxuser" target="_blank">GitHub</a>
-      <a href="#" target="_blank">Twitter</a>
+      <a href="https://x.com/Arishdev_?t=cncJFPEZCTPyW-1q6xOX-g&s=09" target="_blank">Twitter</a>
     </div>
   </div>
 </footer>
